k8s/manifests/n8n/06-n8n-st.yaml
# n8n-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: n8n
  namespace: n8n
spec:
  serviceName: n8n-service
  replicas: 1
  selector:
    matchLabels:
      app: n8n
  template:
    metadata:
      labels:
        app: n8n
    spec:
      containers:
      - name: n8n
        image: n8nio/n8n:latest
        ports:
        - containerPort: 5678
        volumeMounts:
        - name: n8n-data
          mountPath: /home/node/.n8n-data
  volumeClaimTemplates:
  - metadata:
      name: n8n-data
    spec:
      accessModes:
        - ReadWriteOnce
      storageClassName: longhorn-2-best-effort
      resources:
        requests:
          storage: 2Gi
---
apiVersion: v1
kind: Service
metadata:
  name: n8n-service
  namespace: n8n
spec:
  selector:
    app: n8n
  ports:
    - port: 5678
      targetPort: 5678
